--- a/goreleaser.yaml
+++ b/goreleaser.yaml
@@ -28,6 +28,7 @@ dockers:
 
 dockerhub:
   username: "andreyokh"
+  secret_name: DOCKER_TOKEN
   full_description:
     from_file:
       path: ./README.md
