--- a/goreleaser.yaml
+++ b/goreleaser.yaml
@@ -27,11 +27,11 @@ dockers:
       - --label=org.opencontainers.image.revision={{ .FullCommit }}
 
 dockerhub:
-  username: "andreyokh"
-  secret_name: DOCKER_TOKEN
-  full_description:
-    from_file:
-      path: ./README.md
+  - username: "andreyokh"
+    secret_name: DOCKER_TOKEN
+    full_description:
+      from_file:
+        path: ./README.md
 
 release:
   header: |
