--- a/goreleaser.yaml
+++ b/goreleaser.yaml
@@ -26,9 +26,9 @@ dockers:
       - --label=org.opencontainers.image.created={{ time "2006-01-02T15:04:05Z07:00" }}
       - --label=org.opencontainers.image.revision={{ .FullCommit }}
 
-dockerhub:
-  - username: "andreyokh"
-    secret_name: DOCKER_TOKEN
+#dockerhub:
+#  - username: "andreyokh"
+#    secret_name: DOCKER_TOKEN
 
 release:
   header: |
