--- a/goreleaser.yaml
+++ b/goreleaser.yaml
@@ -16,7 +16,7 @@ dockers:
       - "andreyokh/sync-groups-from-authentik-to-outline:{{ .Major }}.{{ .Minor }}"
 #      - "andreyokh/sync-groups-from-authentik-to-outline:{{ .Major }}"
       - "andreyokh/sync-groups-from-authentik-to-outline:latest"
-    dockerfile: Dockerfile
+    dockerfile: goreleaser.Dockerfile
     build_flag_templates:
       - --label=org.opencontainers.image.title={{ .ProjectName }}
       - --label=org.opencontainers.image.description={{ .ProjectName }}
