--- a/.github/workflows/go.yml
+++ b/.github/workflows/go.yml
@@ -23,6 +23,12 @@ jobs:
         with:
           go-version: '1.24'
       -
+        uses: docker/login-action@v1
+        with:
+          registry: docker.io
+          username: "andreyokh"
+          password: ${{ secrets.DOCKER_TOKEN }}
+      -
         name: Run GoReleaser
         uses: goreleaser/goreleaser-action@v6
         with:
